# daddylong

./: .gitignore  README.md  docker-compose.yml  setup.sh
backend/: Dockerfile  alembic.ini  dev.sh  env.example  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/auth/: api.py  models.py  queries.py  schemas.py
backend/app/core/: cache.py  celery_app.py  config.py  database.py  models.py
backend/app/item/: __init__.py  api.py  models.py  queries.py  schemas.py
backend/app/schemas/: __init__.py  token.py
backend/app/tasks/: tasks.py
backend/tests/: test_main.py
frontend/: .eslintrc.js  .prettierignore  Dockerfile  dev.sh  jest.config.js  next.config.js  package-lock.json  package.json
frontend/__tests__/: Home.test.tsx
frontend/app/: layout.tsx  page.tsx
